fix(ie font issue): Fix material font issue on ie (#130)

--- a/src/css/material-icons.styl
+++ b/src/css/material-icons.styl
@@ -3,7 +3,12 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(../assets/fonts/material-icon.woff2) format('woff2');
+  src:
+    local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(../assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
+    url(../assets/fonts/MaterialIcons-Regular.woff) format('woff'),
+    url(../assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
